--- a/energy fit/schedule.html
+++ b/energy fit/schedule.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><html lang='ru'><head>
-<meta charset='UTF-8'><title>EnergyFit</title>
+<meta charset='UTF-8'><title>Расписание</title>
 <link rel='stylesheet' href='css/style.css'>
 <link href='https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap' rel='stylesheet'>
 </head><body>
@@ -19,12 +19,17 @@
  <label class='theme-switch' for='theme-toggle'></label>
 </header>
 
-<section class='hero' style="background-image:url('https://images.unsplash.com/photo-1571019613454-1cb2f99b2d8b?auto=format&fit=crop&w=1600&q=80')">
- <div class='hero-overlay'><div class='container'>
-   <h2 style='font-size:42px;color:#fff;'>EnergyFit — твоя сила</h2>
-   <p style='max-width:450px;color:#eee;'>Тренируйся с лучшими тренерами и получай результат.</p>
-   <a href='prices.html' class='btn'>Перейти к абонементам</a>
- </div></div>
+<section class='section'>
+<h2 class='section-title'>Расписание</h2>
+<div class='container'>
+<table class='table'>
+<tr><th>День</th><th>Время</th><th>Занятие</th></tr>
+<tr><td>Пн</td><td>09:00</td><td>Йога</td></tr>
+<tr><td>Вт</td><td>11:00</td><td>Кардио</td></tr>
+<tr><td>Ср</td><td>18:00</td><td>Силовая</td></tr>
+<tr><td>Чт</td><td>10:00</td><td>Пилатес</td></tr>
+<tr><td>Пт</td><td>19:00</td><td>Функционал</td></tr>
+</table>
+</div>
 </section>
-<footer class='footer'>© 2025 EnergyFit</footer>
-</div></body></html>
+<footer class='footer'>©2025 EnergyFit</footer></div></body></html>
