--- a/energy fit/prices.html
+++ b/energy fit/prices.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><html lang='ru'><head>
-<meta charset='UTF-8'><title>EnergyFit</title>
+<meta charset='UTF-8'><title>Абонементы</title>
 <link rel='stylesheet' href='css/style.css'>
 <link href='https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap' rel='stylesheet'>
 </head><body>
@@ -19,12 +19,13 @@
  <label class='theme-switch' for='theme-toggle'></label>
 </header>
 
-<section class='hero' style="background-image:url('https://images.unsplash.com/photo-1571019613454-1cb2f99b2d8b?auto=format&fit=crop&w=1600&q=80')">
- <div class='hero-overlay'><div class='container'>
-   <h2 style='font-size:42px;color:#fff;'>EnergyFit — твоя сила</h2>
-   <p style='max-width:450px;color:#eee;'>Тренируйся с лучшими тренерами и получай результат.</p>
-   <a href='prices.html' class='btn'>Перейти к абонементам</a>
- </div></div>
+<section class='section'>
+<h2 class='section-title'>Абонементы</h2>
+<div class='container grid'>
+ <div class='card'><h3>1 месяц</h3><p>12 000 ₸</p></div>
+ <div class='card'><h3>3 месяца</h3><p>30 000 ₸</p></div>
+ <div class='card'><h3>6 месяцев</h3><p>55 000 ₸</p></div>
+ <div class='card'><h3>12 месяцев</h3><p>100 000 ₸</p></div>
+</div>
 </section>
-<footer class='footer'>© 2025 EnergyFit</footer>
-</div></body></html>
+<footer class='footer'>©2025 EnergyFit</footer></div></body></html>
